升级到3.2.x